@@ -1,4 +1,4 @@
 author:  bartek szurgot
 www:     http://baszerr.org
 license: GPL
-version: 0.3.1
+version: 0.3.2
